--- a/Pages/servicioDos.html
+++ b/Pages/servicioDos.html
@@ -72,37 +72,37 @@
 
             <div class="zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/primerServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+                <img src="../img/serviciosDos/primerServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenesServicioDos zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/segundoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+                <img src="../img/serviciosDos/segundoServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenesServicioDos zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/tercerServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+                <img src="../img/serviciosDos/tercerServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenesServicioDos zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/cuartoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+                <img src="../img/serviciosDos/cuartoServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenesServicioDos zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/quintoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+                <img src="../img/serviciosDos/quintoServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenesServicioDos zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/sextoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+                <img src="../img/serviciosDos/sextoServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenesServicioDos zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/septimoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+                <img src="../img/serviciosDos/septimoServicio.jpeg" class="imagen-servicio">
             </div>
 
 
