--- a/Pages/servicioTres.html
+++ b/Pages/servicioTres.html
@@ -66,46 +66,46 @@
 
     <div class="container">
 
-        <div class="row servicioThree">
+        <div class="m-0 row justify-content-center mt-5 mb-5">
 
-            <div class="col zoom">
+            <div class="col-auto zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/primerServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/primerServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
-            <div class="col imagenServicioReducida zoom">
+            <div class="col-auto imagenServicioReducida zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/segundoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/segundoServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
-            <div class="col imagenesServicioTres zoom">
+            <div class="col-auto imagenesServicioTres zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/tercerServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/tercerServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
-            <div class="col imagenesServicioTres zoom">
+            <div class="col-auto imagenesServicioTres zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/cuartoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/cuartoServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
-            <div class="col imagenesServicioTres zoom">
+            <div class="col-auto imagenesServicioTres zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/quintoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/quintoServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
-            <div class="col imagenesServicioTres zoom">
+            <div class="col-auto imagenesServicioTres zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/sextoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/sextoServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
-            <div class="col imagenesServicioTres zoom">
+            <div class="col-auto imagenesServicioTres zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/septimoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/septimoServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
-            <div class="col imagenesServicioTres zoom">
+            <div class="col-auto imagenesServicioTres zoom">
                 <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/octavoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
+                <img src="../img/servicioTres/octavoServicio.jpeg" class="imagen-servicio-doble">
             </div>
 
         </div>
