--- a/Pages/servicioUno.html
+++ b/Pages/servicioUno.html
@@ -70,17 +70,17 @@
 
             <div class="zoom">
                 <a class="" href="..." target="_blank"></a>
-                <img src="../img/serviciosUno/primerServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
+                <img src="../img/serviciosUno/primerServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenDosServicioUno zoom flex-shrink-3">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosUno/segundoServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
+                <img src="../img/serviciosUno/segundoServicio.jpeg" class="imagen-servicio">
             </div>
 
             <div class="imagenDosServicioUno zoom flex-shrink-3">
                 <a href="..." target="_blank"></a>
-                <img src="../img/serviciosUno/novenoServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
+                <img src="../img/serviciosUno/novenoServicio.jpeg" class="imagen-servicio">
             </div>
 
         </div>
