--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -17,35 +17,35 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
+    <nav class="navbar navbar-expand-lg navbar-dark colormenu-secundario">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-around barra-navegacion reducirNavbar" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar barra-navegacion" id="navbarNavDropdown">
 
-                <a class="navbar-brand" href="inicio.html">
-                    <div style="text-align: center;">
-                        <b class="navbar-logo">AGM</b>
-                        <br>Ingeniería y Servicios Generales<br/>
-                    </div>
-                </a>
+                <div class="logo-nabvar">
+                    <a class="navbar-brand" href="inicio.html"> <img src="../img/logo/logosecund.png" alt="logo" width="120px"></a>
+
+                    <p class="texto-logo-navbar-2">Ingenieria y Servicios Generales</p>
+
+                </div>
+                
 
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                    <li class="nav-item  ">
+                        <a class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a href="#" class="dropdown-toggle nav-link active" data-toggle="dropdown">
-                            <i class="fas fa-briefcase"></i> Servicios <b class="caret"></b>
+                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-briefcase"></i> Servicios
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a style="color: black;" class="nav-link servicio" href="servicioUno.html">Asesorías & Proyectos de Ingeniería -
-                                    Arquitectura</a></li>
-                            <li><a style="color: black;" class="nav-link servicio" href="servicioDos.html">Servicios Generales en
-                                    Infraestructura & Ingenieria</a></li>
-                            <li><a style="color: black;" class="nav-link servicio" href="servicioTres.html">Servicio de Alquileres de Equipos &
-                                    Herramientas para la Construccion</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
                         </ul>
-                    </li>
+                      </li>
 
                     <li class="nav-item">
                         <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
