--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -16,42 +16,42 @@
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
+     <!-- Navbar -->
+     <nav class="navbar navbar-expand-lg navbar-dark colormenu">
         <div class="container-fluid">
             <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar barra-navegacion" id="navbarNavDropdown">
 
-                <a class="navbar-brand" href="inicio.html">
-                    <div style="text-align: center;">
-                        <b class="navbar-logo">AGM</b>
-                        <br>Ingeniería y Servicios Generales<br/>
-                    </div>
-                </a>
+                <div class="logo-nabvar">
+                    <a class="navbar-brand" href="inicio.html"> <img src="../img/logo/AGM.png" alt="logo" width="90px" height="75px"></a>
+
+                    <p class="texto-logo-navbar">Ingenieria y Servicios Generales</p>
+
+                </div>
+                
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                        <a style="color: #013a6a;" class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a href="#" class="dropdown-toggle nav-link active" data-toggle="dropdown">
-                            <i class="fas fa-briefcase"></i> Servicios <b class="caret"></b>
+                        <a style="color: #013a6a;" class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-briefcase"></i> Servicios
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a style="color: black;" class="nav-link servicio" href="servicioUno.html">Asesorías & Proyectos de Ingeniería -
-                                    Arquitectura</a></li>
-                            <li><a style="color: black;" class="nav-link servicio" href="servicioDos.html">Servicios Generales en
-                                    Infraestructura & Ingenieria</a></li>
-                            <li><a style="color: black;" class="nav-link servicio" href="servicioTres.html">Servicio de Alquileres de Equipos &
-                                    Herramientas para la Construccion</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
                         </ul>
-                    </li>
+                      </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
+                        <a style="color: #013a6a;" class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
+                        <a style="color: #013a6a;" class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                     </li>
                 </ul>
             </div>
@@ -88,23 +88,23 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../img/slider/servicios-generales.jpg" class="d-block w-100" style="height: 550px;" alt="...">
+                <img src="../img/slider/servicio-1.png" class="d-block w-100" style="height: 550px;" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>Asesorías & Proyectos de Ingeniería - Arquitectura</h3>
+                    <h3 class="titulo-servicios">Asesorías & Proyectos de Ingeniería - Arquitectura</h3>
                     <a href="servicioUno.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../img/slider/defensa-civil.jpeg" class="d-block w-100" style="height: 550px;" alt="...">
+                <img src="../img/slider/servicio-2.png" class="d-block w-100" style="height: 550px;" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>Servicios Generales en Infraestructura & Ingenieria</h3>
+                    <h3 class="titulo-servicios">Servicios Generales en Infraestructura & Ingenieria</h3>
                     <a href="servicioDos.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../img/slider/fabricacion.jpeg" class="d-block w-100" style="height: 550px;" alt="...">
+                <img src="../img/slider/servicio-3.png" class="d-block w-100" style="height: 550px;" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>Herramientas para la Construccion</h3>
+                    <h3 class="titulo-servicios">Servicio de Alquileres de Equipos & Herramientas para la Construccion</h3>
                     <a href="servicioTres.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
                 </div>
             </div>
