dia 7 mejorar detalles

--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -83,41 +83,41 @@
         <h2>Contáctanos</h2>
 
         <div class="container">
+            <!-- row justify-content-between -->
+            <div class="contenedor-nosotros-padre">
+                <!-- col-4 -->
+                <div class="contenedor-hijos-uno">
 
-            <div class="m-0 row justify-content-center">
-
-                <div class="col">
-
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7899.426169639965!2d-79.03819326596081!3d-8.130665011132487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ad3ddaf2aacb0f%3A0x1e621c90d5bdcc1b!2sAGM%20Servicios%20Generales!5e0!3m2!1ses!2spe!4v1643852343615!5m2!1ses!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe class="mapa-contactanos" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7899.426169639965!2d-79.03819326596081!3d-8.130665011132487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ad3ddaf2aacb0f%3A0x1e621c90d5bdcc1b!2sAGM%20Servicios%20Generales!5e0!3m2!1ses!2spe!4v1643852343615!5m2!1ses!2spe" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                 </div>
 
-                <div class="col">
+                <div class="contenedor-hijos-dos">
 
                     <div>
-                        <h4 class="subtitulo-contactanos">Dirección:</h4>
-                        <p>Urb. San Eloy Mz.F Lt.15, Trujillo, Peru, 13001</p>
+                        <h5 class="subtitulo-contactanos">Dirección:</h5>
+                        <p class="">Urb. San Eloy Mz.F Lt.15, Trujillo, Peru, 13001</p>
                     </div>
 
                     <div>
-                        <h4 class="subtitulo-contactanos">Teléfono:</h4>
+                        <h5 class="subtitulo-contactanos">Teléfono:</h5>
                         <p>+ 51 943 359 199</p>
                     </div>
 
                     <div>
-                        <h4 class="subtitulo-contactanos">Correo:</h4>
+                        <h5 class="subtitulo-contactanos">Correo:</h5>
                         <p>gerencia.agmingenieria@gmail.com</p>
                         <p>comercial.agmingenieria@gmail.com</p>
                         <p>operaciones.agmingenieria@gmail.com</p>
                     </div>
 
                     <div>
-                        <h4 class="subtitulo-contactanos">Facebook</h4>
+                        <h5 class="subtitulo-contactanos">Facebook</h5>
                         <p><a href="https://www.facebook.com/Agm.Ing.y.Ser">https://www.facebook.com/Agm.Ing.y.Ser</a></p>
                     </div>
 
                     <div>
-                        <h4 class="subtitulo-contactanos">Linkedin</h4>
+                        <h5 class="subtitulo-contactanos">Linkedin</h5>
                         <p><a href="https://www.linkedin.com/company/agm-ingeniería-y-servicios-generales/">https://www.linkedin.com/company/agm-ingeniería-y-servicios-generales/</a></p>
                     </div>
                     
