--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -88,23 +88,23 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../img/slider/servicio-1.png" class="d-block w-100" style="height: 550px;" alt="...">
+                <img src="../img/slider/servicio-1.png" class="d-block w-100 tamaño-carrusel" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3 class="titulo-servicios">Asesorías & Proyectos de Ingeniería - Arquitectura</h3>
+                    <h3 class="titulo-servicios texto-carrusel">Asesorías & Proyectos de Ingeniería - Arquitectura</h3>
                     <a href="servicioUno.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../img/slider/servicio-2.png" class="d-block w-100" style="height: 550px;" alt="...">
+                <img src="../img/slider/servicio-2.png" class="d-block w-100 tamaño-carrusel" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3 class="titulo-servicios">Servicios Generales en Infraestructura & Ingenieria</h3>
+                    <h3 class="titulo-servicios texto-carrusel">Servicios Generales en Infraestructura & Ingenieria</h3>
                     <a href="servicioDos.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../img/slider/servicio-3.png" class="d-block w-100" style="height: 550px;" alt="...">
+                <img src="../img/slider/servicio-3.png" class="d-block w-100 tamaño-carrusel" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3 class="titulo-servicios">Servicio de Alquileres de Equipos & Herramientas para la Construccion</h3>
+                    <h3 class="titulo-servicios texto-carrusel">Servicio de Alquileres de Equipos & Herramientas para la Construccion</h3>
                     <a href="servicioTres.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                 <div class="card" style="width: 15rem; text-align: center;">
                     <img src="../img/card/mantenimiento.jpg" class="card-img-top cards-imagen" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Mantenimiento del Hogar</h5>
+                        <h5 class="card-title inicio-titulo">Mantenimiento del Hogar</h5>
                         <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonMantenimiento" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <img src="../img/card/señales.jpg" class="card-img-top cards-imagen"
                         alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Señales de Seguridad</h5>
+                        <h5 class="card-title inicio-titulo">Señales de Seguridad</h5>
                         <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonSenalDeSeguridad" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                     <img src="../img/card/proteccioncontraincendios.jpg" class="card-img-top cards-imagen"
                         alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Seguridad y protección</h5>
+                        <h5 class="card-title inicio-titulo">Seguridad y protección</h5>
                         <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonSeguridadYProteccion" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                     <img src="../img/card/expediente.jpg" class="card-img-top cards-imagen"
                         alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Asesoria y Elaboración</h5>
+                        <h5 class="card-title inicio-titulo">Asesoria y Elaboración</h5>
                         <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonAsesoriaYElaboracion" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="col">
                             <h4 class="arreglar">Mantenimiento del Hogar</h4>
-                            <p style="justify-content: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum nulla dolorem sit, nemo obcaecati distinctio quae porro nam, ex quas laboriosam omnis itaque ullam perspiciatis cupiditate</p>
+                            <p style="justify-content: center;" class="texto-modal">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum nulla dolorem sit, nemo obcaecati distinctio quae porro nam, ex quas laboriosam omnis itaque ullam perspiciatis cupiditate</p>
                         </div>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                     <h4><i>"No encuentres clientes para tus productos, encuentra productos para tus clientes"</i></h4>
                 </div>
                 <div class="refran-imagen col align-self-center">
-                    <img src="../img/banner/banner-persona.png" alt="persona-pensante" height="300">
+                    <img src="../img/banner/banner-persona.png" alt="persona-pensante" class="tamaño-imagen-banner">
                 </div>
             </div>
         </div>
