--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -81,16 +81,16 @@
 
     <div class="container">
 
-        <div class="nosotros-col-2">
+        <h2>Nosotros</h2>
 
-            <h2>Nosotros</h2>
+        <div class="nosotros-col-2 m-3">
 
-            <div class="descripcion">
+            <div class="descripcion mb-5">
                 <p class="nosotros-texto">AGM Ingenieria y Servicios Generales es una empresa que presenta los servicios en los rubros relacionados a la Consultoría, Ingeniería, Implementación de Equipos de Seguridad, Ejecución de proyectos de Obras Civiles para el sector Público y Privado.</p>
             </div>
 
-            <div class="principios row justify-content-center">
-                <div class="cuadroVision col-auto">
+            <div class="row justify-content-center">
+                <div class="col-auto">
                     <div style="width: 25rem; text-align: center;">
                         <img src="../img/nosotros/vision.png" class="card-img-top imagenes-nosotros" alt="vision">
                         <div class="card-body">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cuadroVision col-auto">
+                <div class="col-auto">
                     <div style="width: 25rem; text-align: center;">
                         <img src="../img/nosotros/mision.png" class="card-img-top imagenes-nosotros" alt="mision">
                         <div class="card-body">
@@ -114,9 +114,9 @@
 
         <hr>
 
-        <div class="row justify-content-evenly m-5">
+        <div class="row justify-content-center m-auto">
 
-            <div class="col-auto w-50">
+            <div class="col-auto">
 
                 <div class="valores-titulo">
                     <h5 class="nosotros-titulo">Valores</h5>
@@ -132,7 +132,7 @@
 
             </div>
 
-            <div class="col-auto mt-5">
+            <div class="col-auto">
 
                 <img class="imagen-nosotros" src="../img/nosotros/valores.png">
 
