--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -67,7 +68,7 @@
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
             <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
@@ -288,7 +289,7 @@
                 <div class="regran-texto col align-self-center">
                     <h3 style="text-align: left;"><b>AGM</b> Ingenieria y Servicios Generales</h3>
                     <br/>
-                    <h4><i>"No encuentres clientes para tus productos, encuentra productos para tus clientes"</i></h4>
+                    <h4><i>"Comprometidos con la seguridad y el bienestar de sus colaboradores"</i></h4>
                 </div>
                 <div class="refran-imagen col align-self-center">
                     <img src="../img/banner/banner-persona.png" alt="persona-pensante" class="tamaño-imagen-banner">
@@ -308,31 +309,31 @@
     <div class="carrusel container clientes">
         <div class="carrusel-items">
           <div class="carrusel-item">
-            <img src="../img/clientes/agroberries.png" alt="" />
+            <img src="../img/clientes/agroberries.png" alt="Agoberries" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/asica.svg" alt="" />
+            <img src="../img/clientes/asica.svg" alt="Asica" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/cajadelsanta.png" alt="" />
+            <img src="../img/clientes/cajadelsanta.png" alt="Caja del Santa" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/incacel.png" alt="" />
+            <img src="../img/clientes/incacel.png" alt="IncaCel" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/petroperu.png" alt="" />
+            <img src="../img/clientes/petroperu.png" alt="PetroPeru" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/prosema.jpg" alt="" />
+            <img src="../img/clientes/prosema.jpg" alt="Prosema" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/saludprimavera.png" alt="" />
+            <img src="../img/clientes/saludprimavera.png" alt="Salud Primavera" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/sanantonio.png" alt="" />
+            <img src="../img/clientes/sanantonio.png" alt="SanAntonio" />
           </div>
           <div class="carrusel-item">
-            <img src="../img/clientes/upn.jpeg" alt="" />
+            <img src="../img/clientes/upn.jpeg" alt="UPN" />
           </div>
           <!-- <div class="carrusel-item">
             <img src="../img/clientes/incacel.png" alt="" />
