--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -84,15 +84,15 @@
 
         <h2>Nosotros</h2>
 
-        <div class="nosotros-col-2 m-3">
+        <div class="nosotros-col-2 m-2">
 
             <div class="descripcion mb-5">
                 <p class="nosotros-texto">AGM Ingenieria y Servicios Generales es una empresa que presenta los servicios en los rubros relacionados a la Consultoría, Ingeniería, Implementación de Equipos de Seguridad, Ejecución de proyectos de Obras Civiles para el sector Público y Privado.</p>
             </div>
 
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <div style="width: 25rem; text-align: center;">
+            <div class="row justify-content-around nosotros-cuerpo">
+                <div class="col-5">
+                    <div style="text-align: center;">
                         <img src="../img/nosotros/vision.png" class="card-img-top imagenes-nosotros" alt="vision">
                         <div class="card-body">
                             <h5 class="card-title nosotros-titulo">Visión</h5>
@@ -100,8 +100,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-auto">
-                    <div style="width: 25rem; text-align: center;">
+                <div class="col-5">
+                    <div style="text-align: center;">
                         <img src="../img/nosotros/mision.png" class="card-img-top imagenes-nosotros" alt="mision">
                         <div class="card-body">
                             <h5 class="card-title nosotros-titulo">Misión</h5>
