--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -40,11 +40,11 @@
                             <i class="fas fa-briefcase"></i> Servicios
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
                         </ul>
                       </li>
 
@@ -286,12 +286,12 @@
     <section class="banner" style="margin-bottom: 35px; margin-top: 35px;">
         <div class="container" >
             <div class="row" style="text-align: center;">
-                <div class="regran-texto col align-self-center">
+                <div class="col align-self-center regran-texto p-3">
                     <h3 style="text-align: left;"><b>AGM</b> Ingenieria y Servicios Generales</h3>
                     <br/>
                     <h4><i>"Comprometidos con la seguridad y el bienestar de sus colaboradores"</i></h4>
                 </div>
-                <div class="refran-imagen col align-self-center">
+                <div class="col align-self-center regran-imagen">
                     <img src="../img/banner/banner-persona.png" alt="persona-pensante" class="tamaño-imagen-banner">
                 </div>
             </div>
