--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -40,11 +40,11 @@
                             <i class="fas fa-briefcase"></i> Servicios
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                          <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
                         </ul>
                       </li>
 
