--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -361,7 +361,7 @@
             <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                 <!-- Left -->
                 <div class="me-5 d-none d-lg-block">
-                    <span>Contactate con nosotros a travez de nuestras redes sociales:</span>
+                    <span>  </span>
                 </div>
                 <!-- Left -->
 
@@ -451,7 +451,11 @@
 
             <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-                © 2022 Copyright:
+
+                <script>
+                    var f = new Date();
+                    document.write("© "+f.getFullYear());
+                    </script> Copyright:
                 <a class="text-reset fw-bold pie-de-pagina" href="https://www.facebook.com/Agm.Ing.y.Ser">AGM - INGENIERIA Y SERVICIOS GENERALES</a>
             </div>
             <!-- Copyright -->
