--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -18,7 +18,7 @@
 <body>
 
      <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg navbar-dark colormenu">
+     <nav class="navbar navbar-expand-lg navbar-dark colormenu navbar-web">
         <div class="container-fluid">
             <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar barra-navegacion" id="navbarNavDropdown">
 
@@ -130,7 +130,7 @@
     <!-- BOton Flotante FIn-->
 
     <!-- carrusel -->
-    <main>
+    <main class="principal-main">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
