--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -64,7 +64,7 @@
 
     <nav class="navbar navbar-light bg-light fixed-top navbar-movil">
         <div class="container-fluid">
-            <a class="navbar-brand logo-movil" href="#">
+            <a class="navbar-brand logo-movil-padre" href="inicio.html">
                 <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
                 <p class="texto-logo-movil">Ingenieria y Servicios Generales</p>
             </a>
@@ -75,37 +75,39 @@
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                    <h5 class="offcanvas-title logo-movil-padre" id="offcanvasNavbarLabel">
+                        <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
+                        <p class="texto-logo-movil">Ingenieria y Servicios Generales</p>
+                    </h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a style="color: #013a6a;" class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                        </li>
+    
+                        <li class="nav-item dropdown">
+                            <a style="color: #013a6a;" class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-briefcase"></i> Servicios
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item item-navbar" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                            </ul>
+                          </li>
+    
+                        <li class="nav-item">
+                            <a style="color: #013a6a;" class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            <a style="color: #013a6a;" class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </div>
