--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -76,8 +76,9 @@
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title logo-movil-padre" id="offcanvasNavbarLabel">
-                        <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
-                        <p class="texto-logo-movil">Ingenieria y Servicios Generales</p>
+                        holaaa
+                        <!-- <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
+                        <p class="texto-logo-movil">Ingenieria y Servicios Generales</p> -->
                     </h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
