--- a/Pages/servicioDos.html
+++ b/Pages/servicioDos.html
@@ -85,11 +85,11 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                            <a style="color: #013a6a;" class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
                         </li>
     
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a style="color: #013a6a;" class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-briefcase"></i> Servicios
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -97,15 +97,15 @@
                               <li><hr class="dropdown-divider"></li>
                               <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                               <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construcción</a></li>
                             </ul>
                           </li>
     
                         <li class="nav-item">
-                            <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
+                            <a style="color: #013a6a;" class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
+                            <a style="color: #013a6a;" class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                         </li>
                     </ul>
                 </div>
@@ -126,38 +126,58 @@
         <div class="d-flex flex-column align-items-center mt-5 mb-5">
 
             <div class="zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/primerServicio.jpeg" class="imagen-servicio">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Fabricación y Montaje de Estructuras Metálicas para Techo que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/servicio-metalicas.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/segundoServicio.jpeg" class="imagen-servicio">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre los servicios en vidriería que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/servicio-vidrieria.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/tercerServicio.jpeg" class="imagen-servicio">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Mantenimiento de Áreas Verdes que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/servicio-jardin.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/cuartoServicio.jpeg" class="imagen-servicio">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Arquitectura y Proyectos que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/servicio-arquitectura.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/quintoServicio.jpeg" class="imagen-servicio">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre El Mantenimiento para el Hogar que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/primerServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/sextoServicio.jpeg" class="imagen-servicio">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el Servicio de Melamine que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/segundoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
             <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/septimoServicio.jpeg" class="imagen-servicio">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre El Mantenimiento para el Hogar que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/tercerServicio.jpeg" class="imagen-servicio"></a>
+            </div>
+
+            <div class="imagenesServicioDos zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Sistema de Cámaras de Seguridad que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/cuartoServicio.jpeg" class="imagen-servicio"></a>
+            </div>
+
+            <div class="imagenesServicioDos zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Seguridad contra Incendios que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/quintoServicio.jpeg" class="imagen-servicio"></a>
+            </div>
+
+            <div class="imagenesServicioDos zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Serviciode Vidriería que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/sextoServicio.jpeg" class="imagen-servicio"></a>
+            </div>
+
+            <div class="imagenesServicioDos zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre Sistema de Cámaras de Seguridad que afrece en su WebSite!" target="_blank">
+                <img src="../img/serviciosDos/septimoServicio.jpeg" class="imagen-servicio"></a>
             </div>
 
 
@@ -174,8 +194,8 @@
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
-            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%de%sus%servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%adquirir%un%servicio...!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
@@ -183,7 +203,6 @@
         </div>
     </div>
     <!-- BOton Flotante FIn-->
-
 
     <!-- Footer -->
 
@@ -193,7 +212,7 @@
             <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                 <!-- Left -->
                 <div class="me-5 d-none d-lg-block">
-                    <span>Contactate con nosotros a travez de nuestras redes sociales:</span>
+                    <span>Contáctate con nosotros a trávez de nuestras redes sociales:</span>
                 </div>
                 <!-- Left -->
 
@@ -208,7 +227,7 @@
                     <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset" target="_blank">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
