--- a/Pages/servicioTres.html
+++ b/Pages/servicioTres.html
@@ -85,11 +85,11 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                            <a style="color: #013a6a;" class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
                         </li>
     
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a style="color: #013a6a;" class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-briefcase"></i> Servicios
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -97,15 +97,15 @@
                               <li><hr class="dropdown-divider"></li>
                               <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                               <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construcción</a></li>
                             </ul>
                           </li>
     
                         <li class="nav-item">
-                            <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
+                            <a style="color: #013a6a;" class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
+                            <a style="color: #013a6a;" class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                         </li>
                     </ul>
                 </div>
@@ -124,44 +124,54 @@
 
         <div class="m-0 row justify-content-center mt-5 mb-5">
 
-            <div class="col-auto zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/primerServicio.jpeg" class="imagen-servicio-doble">
-            </div>
-
-            <div class="col-auto imagenServicioReducida zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/segundoServicio.jpeg" class="imagen-servicio-doble">
+            <div class="col-auto imagenesServicioTres zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Rotomartillo Demoledor que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/rotomartillo.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/tercerServicio.jpeg" class="imagen-servicio-doble">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Winche Eléctrico que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/winche.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/cuartoServicio.jpeg" class="imagen-servicio-doble">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Compresora que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/compresora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/quintoServicio.jpeg" class="imagen-servicio-doble">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Apisonadora que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/apisonadora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/sextoServicio.jpeg" class="imagen-servicio-doble">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Vibradora de Concreto que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/vibradora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/septimoServicio.jpeg" class="imagen-servicio-doble">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Maquina Compactadora que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/compactadora.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
             <div class="col-auto imagenesServicioTres zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/servicioTres/octavoServicio.jpeg" class="imagen-servicio-doble">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de la Mezcladora de Concreto que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/mescladora.jpeg" class="imagen-servicio-doble"></a>
+            </div>
+
+            <div class="col-auto imagenesServicioTres zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Escaleras y Andamios Acrow Certificados que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/escaleras.jpeg" class="imagen-servicio-doble"></a>
+            </div>
+
+            <div class="col-auto imagenesServicioTres zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Escaleras de Fibra y Tijera que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/escalerasfibra.jpeg" class="imagen-servicio-doble"></a>
+            </div>
+
+            <div class="col-auto imagenesServicioTres zoom">
+                <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información sobre el ALQUILER de Andamios Normados que afrece en su WebSite!" target="_blank">
+                <img src="../img/servicioTres/andamios.jpeg" class="imagen-servicio-doble"></a>
             </div>
 
         </div>
@@ -177,8 +187,8 @@
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
-            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%de%sus%servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%adquirir%un%servicio...!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
@@ -196,7 +206,7 @@
             <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                 <!-- Left -->
                 <div class="me-5 d-none d-lg-block">
-                    <span>Contactate con nosotros a travez de nuestras redes sociales:</span>
+                    <span>Contáctate con nosotros a trávez de nuestras redes sociales:</span>
                 </div>
                 <!-- Left -->
 
@@ -211,7 +221,7 @@
                     <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset" target="_blank">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
