--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -97,7 +97,7 @@
                               <li><hr class="dropdown-divider"></li>
                               <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
                               <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construcción</a></li>
                             </ul>
                           </li>
     
@@ -122,8 +122,8 @@
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
             <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
-            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20más%20información%de%sus%servicios&body=Hola,%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%adquirir%un%servicio...!" class="fas fa-envelope"></a>
             <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
@@ -148,21 +148,21 @@
                     <img src="../img/slider/servicio-1.png" class="d-block w-100 tamaño-carrusel" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="titulo-servicios texto-carrusel">Asesorías & Proyectos de Ingeniería - Arquitectura</h3>
-                        <a href="servicioUno.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
+                        <a href="servicioUno.html" class="btn btn-primary botonprincipal align-content-center">Ver más</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/slider/servicio-2.png" class="d-block w-100 tamaño-carrusel" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="titulo-servicios texto-carrusel">Servicios Generales en Infraestructura & Ingenieria</h3>
-                        <a href="servicioDos.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
+                        <a href="servicioDos.html" class="btn btn-primary botonprincipal align-content-center">Ver más</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/slider/servicio-3.png" class="d-block w-100 tamaño-carrusel" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="titulo-servicios texto-carrusel">Servicio de Alquileres de Equipos & Herramientas para la Construccion</h3>
-                        <a href="servicioTres.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
+                        <a href="servicioTres.html" class="btn btn-primary botonprincipal align-content-center">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title titulo-modal" id="BotonLabelMantenimiento">Servicios</h3>
+                    <h3 class="modal-title titulo-modal" id="BotonLabelMantenimiento">Producto</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto...!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -264,7 +264,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title titulo-modal" id="BotonLabelSenalYSeguridad">Servicios</h3>
+                    <h3 class="modal-title titulo-modal" id="BotonLabelSenalYSeguridad">Producto</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -279,7 +279,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto...!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -291,7 +291,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title titulo-modal" id="BotonLabelSeguridadYProteccion">Servicios</h3>
+                    <h3 class="modal-title titulo-modal" id="BotonLabelSeguridadYProteccion">Producto</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -306,7 +306,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto..!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -318,7 +318,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title titulo-modal" id="BotonLabelAsesoriaYElaboracion">Servicios</h3>
+                    <h3 class="modal-title titulo-modal" id="BotonLabelAsesoriaYElaboracion">Producto</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -333,7 +333,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Me interesa comprar el producto...!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -362,7 +362,7 @@
 
     <!-- cliente -->
 
-    <h2>Clientes</h2>
+    <h2>Nuestros Clientes</h2>
 
     <div class="carrusel container clientes">
         <div class="carrusel-items">
@@ -416,7 +416,7 @@
             <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                 <!-- Left -->
                 <div class="me-5 d-none d-lg-block">
-                    <span>  </span>
+                    <span>Contáctate con nosotros a trávez de nuestras redes sociales:</span>
                 </div>
                 <!-- Left -->
 
@@ -431,7 +431,7 @@
                     <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset" target="_blank">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito más información de sus servicios que afrece en su WebSite!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
@@ -511,7 +511,7 @@
                     var f = new Date();
                     document.write("© "+f.getFullYear());
                     </script> Copyright:
-                <a class="text-reset fw-bold pie-de-pagina" href="https://www.facebook.com/Agm.Ing.y.Ser">AGM - INGENIERIA Y SERVICIOS GENERALES</a>
+                <a class="text-reset fw-bold pie-de-pagina" href="https://www.facebook.com/Agm.Ing.y.Ser" target="_blank">AGM - INGENIERIA Y SERVICIOS GENERALES</a>
             </div>
             <!-- Copyright -->
         </section>
